[project]
name = "whiteprint-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-cloud-aiplatform>=1.109.0",
    "google-genai>=1.30.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-google-vertexai>=2.0.28",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.5",
    "langgraph-cli[inmem]>=0.3.6",
    "markdown>=3.8.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "rich>=14.1.0",
]
